2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-15  Justin Fila  <filajust@arctic.cse.msu.edu>
 
 * Added an HTTP response and a header/body to display in the browser
 * reviewed this too.

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * Fixed some formatting and merged in changes from code review

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * Made the test work (test_server.py)

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * Added different http response for /content, /file, and /image urls

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * added more tests to the test_server script, differentiate between GET and POST

2014-01-23  Justin Fila  <filajust@arctic.cse.msu.edu>

 * fixed the index out of bounds error

2014-01-26  Justin Fila  <filajust@arctic.cse.msu.edu>

 * added a form page and a submission page that parses the query